--- a/.github/workflows/zodgame.yml
+++ b/.github/workflows/zodgame.yml
@@ -17,7 +17,7 @@ jobs:
     - uses: actions/checkout@v3
     - name: Install requirements
       run: |
-        pip3 install -r ./zodgame/requirements.txt
+        python3 -m pip install -r ./zodgame/requirements.txt
     - name: Run 
       run: |
         python3 ./zodgame/zodgame.py "${{secrets.ZODGAME_COOKIE}}"
